gtkpod V0.51-CVS
	NEW FEATURE: display free space on iPod.

	NEW FEATURE: menu item "Arrange Sort Tabs" to make all visible
	sort tabs the same size

	IMPROVEMENT: new song column types: file size and play time

	BUGFIX: fixed "dead" context menu "Alphabetize"

gtkpod V0.50
	NEW FEATURE: context sensitive popup menues (right mouse button
	click in playlist view, sort tabs or song view.

	NEW FEATURE: play song with xmms (two user definable commands).

	NEW FEATURE: option to mount the iPod directory on startup and
	unmount it on exit.

	NEW FEATURE: mount/unmount ipod directory on startup/exit, and/or
	execute ~/.gtkpod/gtkpod.in,out (or /etc/gtkpod/gtkpod.in,out if
	the former doesn't exist) on startup/exit. First gtkpod.in is
	executed, then the ipod is mounted (if this option is
	activated). On exit, it's the other way round.

	NEW FEATURE: read global prefs /etc/gtkpod/prefs if
	~/.gtkpod/prefs does not exist. Useful, e.g. to set a machine-wide
	default mountpoint for the ipod.

	IMPROVEMENT: "Add Songs" and "Add Directory" has a new default
	behaviour. They will now add songs/directories to the currently
	selected playlist. If no playlist is selected, they add to the
	master playlist.
	"Add Playlist" will still create a new playlist before adding the
	songs into it. Also, when playlist files are added with "Add
	Songs" or "Add Directory" and no playlist is selected, a new
	playlist will be selected for each playlist file.

	NEW FEATURE: user settable: save song order after sort action
	automatically?

	NEW FEATURE: columns in song view can be dragged into any
	order. Order will be saved.
	
        Change of copyright: itunesdb.c and itunesdb.h are now under the
	GNU Lesser General Public License to make it easier to use the
	code in other programs.

	BUGFIX: when writing tags to file, all tags were updated even if
	you selected only to update changed tags in the the preferences.

	NEW FEATURE: drag and drop files/directories/playlists from