@@ -1331,7 +1331,7 @@
 	    <widget class="GtkCheckButton" id="never_again">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">Never ask this Again</property>
+	      <property name="label" translatable="yes">Never show this dialogue again</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="active">False</property>
@@ -1646,7 +1646,7 @@
 		      <child>
 			<widget class="GtkCheckButton" id="cfg_update_charset">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Normally the charset specified when first importing the song will be used to update the song information. If you chose a wrong charset when first importing a song and want to correct it using the &quot;Update Song&quot; function, you must check this option. Note: songs imported before V0.51 will have no charset stored and the charset specified above will always be used.</property>
+			  <property name="tooltip" translatable="yes">Normally the charset specified when first importing the song will be used to update the song information. If you have chosen a wrong charset when first importing a song and want to correct it using the &quot;Update Song&quot; function, you must check this option. Note: charset info is stored in the extended information file (see Export) and songs imported before V0.51 will have no charset stored -- the charset specified above will be used at first.</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes">Use selected charset also when updating song</property>
 			  <property name="use_underline">True</property>
@@ -2072,7 +2072,7 @@ existing songs with identical filenames</property>
 			  <property name="tooltip" translatable="yes">Highly recommended for faster import when taking advantage of the duplication recognition. Also, having the PC filenames allows writing changed ID3 tags to disk, and even to reconstruct your ipod's contents in case of file system corruption (change the &quot;transferred=&quot; entries in your backuped database).</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes">Write extended information (PC filenames,
-MD5 hashes). Recommended.</property>
+MD5 hashes, charset). Recommended.</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="active">False</property>
@@ -2174,7 +2174,7 @@ MD5 hashes). Recommended.</property>
 		      <child>
 			<widget class="GtkTable" id="table3">
 			  <property name="visible">True</property>
-			  <property name="n_rows">1</property>
+			  <property name="n_rows">2</property>
 			  <property name="n_columns">1</property>
 			  <property name="homogeneous">False</property>
 			  <property name="row_spacing">0</property>
@@ -2203,12 +2203,41 @@ MD5 hashes). Recommended.</property>
 			      <property name="y_options"></property>
 			    </packing>
 			  </child>
+
+			  <child>
+			    <widget class="GtkCheckButton" id="cfg_write_charset">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Normally the charset specified when first importing the song will be used to write the tags. If you have chosen a wrong charset when first importing a song, you should select this option along with the correct charset.  Note: uses the extended information file to store the charset information (see above) and songs imported before V0.51 will have no charset stored -- the charset specified in the Input section will be used at first.</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Use selected charset (in the input section)
+when writing tags</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			      <signal name="toggled" handler="on_cfg_write_charset_toggled" last_modification_time="Sat, 05 Apr 2003 06:42:41 GMT"/>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">0</property>
+			      <property name="right_attach">1</property>
+			      <property name="top_attach">1</property>
+			      <property name="bottom_attach">2</property>
+			      <property name="x_padding">20</property>
+			      <property name="x_options">fill</property>
+			      <property name="y_options"></property>
+			    </packing>
+			  </child>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
 			  <property name="expand">False</property>
 			  <property name="fill">False</property>
 			</packing>
+		      </child>
+
+		      <child>
+			<placeholder/>
 		      </child>
 
 		      <child>
