@@ -195,6 +195,7 @@ struct cfg *cfg_new(void)
     mycfg->show_non_updated = TRUE;
     mycfg->display_toolbar = TRUE;
     mycfg->update_charset = FALSE;
+    mycfg->write_charset = FALSE;
     mycfg->toolbar_style = GTK_TOOLBAR_BOTH;
     mycfg->save_sorted_order = FALSE;
     mycfg->sort_tab_num = 2;
@@ -376,6 +377,10 @@ read_prefs_from_file_desc(FILE *fp)
 	  else if(g_ascii_strcasecmp (line, "update_charset") == 0)
 	  {
 	      prefs_set_update_charset((gboolean)atoi(arg));
+	  }
+	  else if(g_ascii_strcasecmp (line, "write_charset") == 0)
+	  {
+	      prefs_set_write_charset((gboolean)atoi(arg));
 	  }
 	  else if(g_ascii_strcasecmp (line, "save_sorted_order") == 0)
 	  {
@@ -611,6 +616,7 @@ write_prefs_to_file_desc(FILE *fp)
     fprintf(fp, "show_non_updated=%d\n",prefs_get_show_non_updated());
     fprintf(fp, "display_toolbar=%d\n",prefs_get_display_toolbar());
     fprintf(fp, "update_charset=%d\n",prefs_get_update_charset());
+    fprintf(fp, "write_charset=%d\n",prefs_get_write_charset());
     fprintf(fp, "save_sorted_order=%d\n",prefs_get_save_sorted_order());
     fprintf(fp, _("# window sizes: main window, confirmation scrolled,\n#               confirmation non-scrolled, dirbrowser\n"));
     fprintf (fp, "size_gtkpod.x=%d\n", cfg->size_gtkpod.x);
@@ -1213,6 +1219,16 @@ gboolean prefs_get_update_charset (void)
 void prefs_set_update_charset (gboolean val)
 {
     cfg->update_charset = val;
+}
+
+gboolean prefs_get_write_charset (void)
+{
+    return cfg->write_charset;
+}
+
+void prefs_set_write_charset (gboolean val)
+{
+    cfg->write_charset = val;
 }
 
 gboolean prefs_get_save_sorted_order (void)
